// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea Counter Text should render counter text correctly 1`] = `
<View
  accessible={false}
  style={
    [
      {
        "marginLeft": 16,
        "marginTop": 4,
      },
    ]
  }
>
  <Text
    accessible={false}
    style={
      [
        {
          "color": "#95A1B5",
          "fontFamily": "Rubik-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 14,
          "textAlign": "left",
        },
      ]
    }
  >
    0/200
  </Text>
</View>
`;

exports[`TextArea Counter Text should render null when not has error text 1`] = `
<View
  accessible={false}
  style={
    [
      {
        "marginLeft": 16,
        "marginTop": 4,
      },
    ]
  }
>
  <Text
    accessible={false}
    style={
      [
        {
          "color": "#95A1B5",
          "fontFamily": "Rubik-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 14,
          "textAlign": "left",
        },
      ]
    }
  >
    0/200
  </Text>
</View>
`;

exports[`TextArea Counter Text should render with custom maxLength 1`] = `
<View
  accessible={false}
  style={
    [
      {
        "marginLeft": 16,
        "marginTop": 4,
      },
    ]
  }
>
  <Text
    accessible={false}
    style={
      [
        {
          "color": "#95A1B5",
          "fontFamily": "Rubik-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 14,
          "textAlign": "left",
        },
      ]
    }
  >
    0/500
  </Text>
</View>
`;
